test/fail/runtime/infinite_eq.lly
#[
RuntimeError: Infinite loop in comparison.
Traceback:
    from infinite_eq.lly:9: in __main__
]#

var lso = [Dynamic(1), Dynamic(2), Dynamic(3)]
lso[0] = Dynamic(lso)
if lso == lso:
	print("This will never happen.\n")
